Saving more Improvments of Port Settings.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -120,6 +120,19 @@
        </layout>
       </item>
       <item>
+       <widget class="QPushButton" name="pbSettings">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Settings</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
