--- a/PortSettings.ui
+++ b/PortSettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>479</width>
-    <height>373</height>
+    <width>440</width>
+    <height>390</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,7 @@
        </font>
       </property>
       <property name="text">
-       <string>Project Settings</string>
+       <string>Port Settings</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -42,13 +42,24 @@
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
         <widget class="QLabel" name="label">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
-          <string>Send Receive on communication port</string>
+          <string>Send Receive on Port:</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QComboBox" name="cmbCOMportName"/>
+        <widget class="QComboBox" name="cmbCOMportName">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -68,8 +79,154 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QGridLayout" name="gridLayout">
+       <item row="1" column="3">
+        <widget class="QLabel" name="label_7">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Stop bits</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="cmbBaudRate">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="currentText">
+          <string>300 bps</string>
+         </property>
+         <item>
+          <property name="text">
+           <string>300 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>600 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1200 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>2400 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>4800 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>9600 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>19200 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>38400 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>57600 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>115200 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>230400 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>460800 bps</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>921600 bps</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Fixed</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Buad Rate</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Parity Error Char</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QLabel" name="label_3">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Data bits</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="4">
         <widget class="QComboBox" name="cmbStopBits">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <item>
           <property name="text">
            <string>1</string>
@@ -87,29 +244,13 @@
          </item>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_5">
-         <property name="text">
-          <string>Parity</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Data bits</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Buad Rate</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="4">
         <widget class="QComboBox" name="cmbDataBits">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <item>
           <property name="text">
            <string>5</string>
@@ -132,8 +273,25 @@
          </item>
         </widget>
        </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_5">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Parity</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="1">
         <widget class="QComboBox" name="cmbParity">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <item>
           <property name="text">
            <string>Even</string>
@@ -161,34 +319,13 @@
          </item>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="cmbBaudRate"/>
-       </item>
-       <item row="0" column="2">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="1" column="3">
-        <widget class="QLabel" name="label_7">
-         <property name="text">
-          <string>Stop bits</string>
-         </property>
-        </widget>
-       </item>
        <item row="2" column="1">
         <widget class="QComboBox" name="cmbParityErrorChar">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <item>
           <property name="text">
            <string>(Ignor)</string>
@@ -216,13 +353,6 @@
          </item>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_6">
-         <property name="text">
-          <string>Parity Error Char</string>
-         </property>
-        </widget>
-       </item>
       </layout>
      </widget>
     </item>
@@ -245,14 +375,26 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="pbConfiguration">
+        <property name="font">
+         <font>
+          <pointsize>14</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="text">
          <string>Config</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="pbCancel">
+        <property name="font">
+         <font>
+          <pointsize>14</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="text">
          <string>Cancel</string>
         </property>
