--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>870</width>
-    <height>580</height>
+    <width>1191</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -224,6 +224,9 @@
        </spacer>
       </item>
      </layout>
+    </item>
+    <item>
+     <widget class="QTableView" name="tableView"/>
     </item>
     <item>
      <widget class="QTextBrowser" name="textBrowser">
